[gd_scene load_steps=26 format=2]

[ext_resource path="res://assets/img/effect/bullet/WaterShot.png" type="Texture" id=1]
[ext_resource path="res://assets/scene/Effect/DecayBullet.gd" type="Script" id=2]
[ext_resource path="res://assets/scene/Effect/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/effect/bullet/SharpShot.png" type="Texture" id=4]
[ext_resource path="res://assets/img/effect/bullet/SmellCloud.png" type="Texture" id=5]
[ext_resource path="res://assets/img/effect/bullet/Corrosive.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Corrosive",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "SmellCloud",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "SharpShot",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 15 ), SubResource( 14 ) ],
"loop": true,
"name": "WaterShot",
"speed": 7.0
} ]

[sub_resource type="CapsuleShape2D" id=18]
radius = 6.0
height = 23.0

[sub_resource type="CircleShape2D" id=19]
radius = 6.0

[node name="DecayBullet" type="RigidBody2D"]
z_index = 1
collision_layer = 256
collision_mask = 41
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "Corrosive"
playing = true

[node name="Lifespan" type="Timer" parent="."]
one_shot = true

[node name="DPS" type="Timer" parent="."]

[node name="Hitbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 7.62939e-06, 0 )
shape = SubResource( 18 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
shape = SubResource( 19 )

[node name="CastTime" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Lifespan" to="." method="_on_Lifespan_timeout"]
[connection signal="timeout" from="DPS" to="." method="_on_DPS_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="CastTime" to="." method="_on_CastTime_timeout"]

[editable path="Hitbox"]
